<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.binbuddy.ui.fragments.HomeFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.example.binbuddy.ui.fragments.ScanFragment"
        android:label="@string/scanner_title"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.binbuddy.ui.fragments.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.binbuddy.ui.fragments.SearchFragment"
        android:label="@string/search_title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.binbuddy.ui.fragments.AccountFragment"
        android:label="@string/nav_account"
        tools:layout="@layout/fragment_account" />

</navigation>